Fix overflow on page

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ body {
   align-items: center;
   width: 100%;
   max-width: 90em;
+  overflow: hidden;
 }
 
 .main-header, .main-content, .main-footer {
@@ -105,7 +106,7 @@ SCSS and BEM structure were used on this project
     border-bottom: 0.21875em solid #E5E9F2;
   }
 }
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media screen and (min-width: 1024px) {
   .main-header {
     justify-content: space-around;
     background-color: #ffffff;
@@ -162,7 +163,7 @@ SCSS and BEM structure were used on this project
     display: block;
   }
 }
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media screen and (min-width: 1024px) {
   .menu-button {
     display: none;
   }
@@ -173,7 +174,7 @@ SCSS and BEM structure were used on this project
   stroke-width: 6;
   transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media screen and (min-width: 1024px) {
   .menu-button__line {
     transform: scale(0);
   }
@@ -193,7 +194,7 @@ SCSS and BEM structure were used on this project
   stroke-dashoffset: -134;
   stroke-width: 6;
 }
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media screen and (min-width: 1024px) {
   .menu-button--opened {
     display: none;
   }
@@ -295,7 +296,7 @@ SCSS and BEM structure were used on this project
     border-radius: 0 0 1.875em 1.875em;
   }
 }
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media screen and (min-width: 1024px) {
   .navigate {
     width: auto;
   }
@@ -506,7 +507,7 @@ SCSS and BEM structure were used on this project
 }
 .image__stats {
   position: absolute;
-  right: -10%;
+  right: -7.375em;
 }
 @media screen and (max-width: 768px) {
   .image__stats {
@@ -518,7 +519,7 @@ SCSS and BEM structure were used on this project
     transform: scale(0.65);
   }
 }
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media screen and (min-width: 1024px) {
   .image__stats {
     width: 100%;
     max-width: 37em;
@@ -550,7 +551,7 @@ SCSS and BEM structure were used on this project
     display: none;
   }
 }
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media screen and (min-width: 1024px) {
   .circle-background {
     width: 40em;
     height: 40em;
