--- a/scss/components/_mediaquery.scss
+++ b/scss/components/_mediaquery.scss
@@ -11,5 +11,5 @@
     @if ($device==md) { @media screen and (min-width: 769px) and (max-width: 1023px) { @content; } }
 
     /// @mdtop: Medium and Desktop device
-    @if ($device==mdtop) { @media screen and (min-width: 1024px) and (max-width: 1440px) { @content; } }
+    @if ($device==mdtop) { @media screen and (min-width: 1024px) { @content; } }
 }
